--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Poppins;
-    background-color: beige;
+    background-color: rgb(178, 179, 179);
 }
 
 .container {
